--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "csv": "5.3.2",
     "env-cmd": "10.1.0",
     "file-saver": "2.0.5",
+    "jszip": "^3.6.0",
     "lodash": "4.17.20",
     "material-ui-dropzone": "3.5.0",
     "moment": "2.29.1",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "11.2.4",
     "react-redux": "7.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.3.0",
     "react-table": "7.6.3",
     "react-toastify": "6.2.0",
     "redux": "4.0.5",
