--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-API_TOKEN = 'secret';
-API_URL = http://localhost:16000;
+API_TOKEN = 'secret'
+REACT_APP_DEV_API = http://localhost:16000
+REACT_APP_PROD_API = http://http://ec2-18-138-191-166.ap-southeast-1.compute.amazonaws.com:11000/api
 PORT=30001
