Revert the api link to prod

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 API_TOKEN = 'secret'
 REACT_APP_DEV_API = http://localhost:16000
-REACT_APP_PROD_API = http://wms-cic.projkairos.com:11000/api
+REACT_APP_PROD_API = http://www.projkairos.com:11000/api
 PORT=30001
